# nev

./: .pre-commit-config.yaml  manage.py  pyproject.toml
main/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
main/templates/main/: base.html
nev/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
